# Delta

./: .gitmodules  CMakeLists.txt  README.md  RunCustomTests.sh  RunUnitTests.sh  UnixBuild.sh
Demo/: CMakeLists.txt  Includes.hpp  main.cpp
Sources/: Archetype.hpp  CMakeLists.txt  Component.cpp  Component.hpp  ECS.cpp  ECS.hpp  Entity.cpp  Entity.hpp  Registry.cpp  Registry.hpp  Silverback.hpp  System.cpp  System.hpp  TypeId.hpp
Tests/: CMakeLists.txt  Includes.hpp
Tests/Custom/: CMakeLists.txt  main.cpp
Tests/CustomTests/: CMakeLists.txt  main.cpp
Tests/UnitTests/: CMakeLists.txt  Components.hpp  Includes.hpp  Registry.cpp  TypeId.cpp
Tests/Units/: TypeId.cpp
Units/: CMakeLists.txt  TypeId.cpp
